--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
